# ardupilot-log-diagnosis

./: Dockerfile  ENHANCEMENT_ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
data/clean_imports/basic_dataset/: ground_truth.json
data/raw_downloads/forum_expert_batch/: block1_ardupilot_discuss.csv  crawler_manifest_v2.csv  crawler_manifest_v2.json  crawler_summary_v2.json  expert_miner_state.json
docs/: UPGRADE_ROADMAP.md  features.md
models/: anomaly_detector.joblib  classifier.joblib  scaler.joblib
src/: __init__.py
src/cli/: __init__.py
src/cli/commands/: batch.py
src/data/: __init__.py
src/diagnosis/: __init__.py
src/features/: __init__.py  derived_features.py
src/parser/: __init__.py
src/retrieval/: __init__.py  similarity.py
tests/: test_batch.py
training/: features.csv  labels.csv
