[project]
name = "ardupilot-log-diagnosis"
version = "1.0.1"
description = "AI-powered ArduPilot .BIN diagnostic analyzer for flight log failure detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ArduPilot Log Diagnosis Team"}
]
keywords = ["ardupilot", "flight-log", "diagnostics", "machine-learning", "xgboost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pymavlink>=2.0.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "joblib>=1.1.0",
    "pyyaml>=6.0",
    "pandas>=1.3.0",
    "imbalanced-learn>=0.9.0",
    "matplotlib>=3.5.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]
forum = [
    "scrapegraph-py>=1.0.0",
    "crawlbase>=1.0.0",
    "scraperai>=0.1.0",
]

[project.scripts]
ardupilot-diagnosis = "src.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["recovered_from_ardupilot_folder", "data", "archive", ".venv"]

[tool.ruff]
ignore = ["E402"]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
